[package]
name = "belenios"
version = "0.1.0"
edition = "2021"
authors = ["Mark Schultz"]
description = "An Implementation of the Belenios e-voting protocol in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

curve25519-dalek = "3.2.1"
# Modified to expose some pub(crate) struct fields for a checksum calculation
ring = "0.16.20"
derive_builder = "0.10.2"
array-init = "2.0.0"
